<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_dark">


    <Button
        android:id="@+id/signupbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/keysLayout"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="117dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="0dp"
        android:background="@drawable/button_custom"
        android:text="@string/signup_button_label"
        android:textColor="@color/background_purple" />

    <Button
        android:id="@+id/cancelbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/keysLayout"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="117dp"
        android:background="@color/colorPrimary"
        android:text="@string/cancel_button_label"

        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="478dp"
        android:contentDescription="@string/backimage_description"
        android:scaleType="fitStart"
        android:src="@drawable/soldier_fixed"
        android:layout_alignParentBottom="true"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_medal_foreground" />

    <LinearLayout
        android:id="@+id/keysLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:alpha="0.9"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingRight="20dp"
        android:paddingBottom="20dp">

        <EditText
            android:id="@+id/usernamefield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/subtitle"
            android:layout_alignParentLeft="true"

            android:hint="@string/username_hint"
            android:textColorHint="@color/light_grey"
            android:textSize="17sp"
            tools:focusable="false">

            <requestFocus />
        </EditText>


        <EditText
            android:id="@+id/passwordfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@+id/subtitle"
            android:layout_alignParentLeft="true"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColorHint="@color/light_grey"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/emailfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/subtitle"
            android:layout_alignParentLeft="true"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/light_grey"
            android:textSize="17sp" />

    </LinearLayout>

</RelativeLayout>