<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_dark">

    <Button
        android:id="@+id/logInBtn"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/button_custom"
        android:text="LOG IN"
        android:textColor="@color/pressed_brown_button"
        app:layout_constraintEnd_toStartOf="@+id/guestBtn"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/passwordTIL" />

    <Button
        android:id="@+id/guestBtn"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@color/colorPrimary"
        android:text="GUEST"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/logInBtn"
        app:layout_constraintTop_toBottomOf="@+id/passwordTIL" />

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="421dp"
        android:layout_height="534dp"
        android:contentDescription="@string/backimage_description"
        android:scaleType="fitStart"
        android:src="@drawable/soldier_fixed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_medal_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/signup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:text="@string/signup_text"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guestBtn" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.80" />

    <EditText
        android:id="@+id/passwordTIL"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:alpha="0.8"
        android:hint="@string/password_hint"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/usernameTIL">

    </EditText>

    <EditText
        android:id="@+id/usernameTIL"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:alpha="0.8"
        android:hint="@string/username_hint"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/logo">



    </EditText>


</androidx.constraintlayout.widget.ConstraintLayout>